--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -19,7 +19,7 @@ table.meta tr td:nth-child(2){
     height: 60px;
     overflow: hidden;
     float:left;
-
+    margin-top:10px;
 }
 
 #image-text-list li .content{
