--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -1,7 +1,7 @@
 @import "vertical_menu";
 
 ul#questions{
-  li .left{
+  li .avatar{
       float:left;
       width: 60px;
       margin-right: 10px;
