--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,7 +6,7 @@
   <%= render 'nav' %>
   <div class='row'>
     <div class='span-l'>
-      <ul id='image-text-list' class='inline'>
+      <ul id='groups' class='inline image-text-list clearfix'>
         <%- @groups.each do |group| %>
           <li class='hover'>
             <div class='image'>
