--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,9 @@
   <%= tab.questions '问答', questions_path %>
   <%= tab.groups '群组', groups_path %>
   <%= tab.webclasses '班级', webclasses_path %>
+  <%= tab.schools '学校', schools_path %>
 <% end %>
+
 <form class="navbar-search pull-left">
   <input type="text" class="search-query" placeholder="输入您感兴趣的关键字">
 </form>
