--- a/app/views/group/settings/_menu.html.erb
+++ b/app/views/group/settings/_menu.html.erb
@@ -3,7 +3,7 @@
     <%= tabs_tag(:namespace => :webclass_admin_nav, :open_tabs => {:class => "nav nav-tabs nav-stacked"}, :builder =>     MenuTabBuilder) do |tab| %>
       <%= tab.index "基本设置", [@current_namespace, :settings].flatten %>
       <%= tab.sections "课时管理", [@current_namespace, :sections].flatten %>
-      <%= tab.courses "课程管理", [@current_namespace, :courses].flatten %>
+      <%= tab.courses "课程管理", [:admin, @current_namespace, :courses].flatten %>
     <% end %>
   </div>
 </div>
