--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -7,28 +7,33 @@
   <%= render 'nav' %>
   <div class='row'>
     <div class='span-l'>
-      <h4 class='border'>
-        全部课件
-      </h4>
-      <table class='table'>
-        <thead>
-          <tr class="success">
-            <th width='60'></th>
-            <th>文件名</th>  
-            <th width='60'>大小</th>
-            <th width='60'>目录</th>
-            <th width='100'>创建时间</th>
-            <th width='100'>操作</th>
-          </tr>
-        </thead>
-        <tbody id='media-list'>
-          <%= render partial: 'shared/media/medium', collection: @media %>
-        </tbody>
-      </table>
+      <ul id='media' class='inline image-text-list clearfix'>
+        <%- @media.each do |medium| %>
+          <li class='hover'>
+            <div class='image'>
+              <%= link_to image_tag(medium.thumbnail_url), [:user, medium.creator, medium] %>
+            </div>
+            <div class='content'>
+              <h4><%= link_to medium.title, [:user, medium.creator, medium] %></h4>
+              <p>
+                <%- if medium.grade %>
+                  <%= link_to medium.grade.name, [medium.grade, :media]%>
+                <% end %>
+                <%- if medium.subject %>
+                  <%= link_to medium.subject.name, [medium.subject, :media]%>
+                <% end %>
+              </p>
+              <p>
+                下载(<%= medium.downloads_count %>) 查看(<%= medium.readings_count %>)
+              </p>
+              <p>上传日期(<%= format_datetime(medium.created_at) %>)</p>
+            </div>
+          </li>
+        <% end %>
+      </ul>
       <%= paginate @media %>
     </div>
     <div class='span-r'>
-      <h4 class='border'>资源专家</h4>
       <%= render 'top_users' %>
     </div>
   </div>
