--- a/app/views/shared/posts/_post.html.erb
+++ b/app/views/shared/posts/_post.html.erb
@@ -7,14 +7,16 @@
     <h4 class='border'>
       <%= link_to post.title, [@current_namespace||[:user, post.creator], post].flatten %>
 
-      <%= link_to [@current_namespace||[:user, post.creator], post].flatten, method: :delete, class: 'btn btn-small btn-danger pull-right span', confirm: "是否删除 #{post.title}" do %>
-        <i class='icon icon-ban-circle'></i>
-        <span>删除</span>
-      <% end %>
-
-      <%= link_to [:edit, @current_namespace||[:user, post.creator], post].flatten, class: 'btn btn-small btn-info pull-right span' do %>
-        <i class='icon icon-edit'></i>
-        <span>编辑</span>
+      <%- if current_user and current_user.id == post.creator.id %>
+        <%= link_to [@current_namespace||[:user, post.creator], post].flatten, method: :delete, class: 'btn btn-small btn-  danger pull-right span', confirm: "是否删除 #{post.title}" do %>
+          <i class='icon icon-ban-circle'></i>
+          <span>删除</span>
+        <% end %>
+  
+        <%= link_to [:edit, @current_namespace||[:user, post.creator], post].flatten, class: 'btn btn-small btn-info pull-  right span' do %>
+          <i class='icon icon-edit'></i>
+          <span>编辑</span>
+        <% end %>
       <% end %>
     </h4>
     <p>
