--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <%= render 'layouts/head' %>
   </head>
-  <body>
+  <body data-offset='50'>
     <%= render "layouts/header" %>
     <div id='index-page' class="container">
       <div class="row">
