--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,21 +1,12 @@
 <li id='post-<%= post.id %>'>
-  <div class='avatar'>
+  <div class='left'>
     <br />
     <%= link_to user_avatar_tag(post.creator, 's'), post.creator %>
   </div>
   <div class='content'>    
     <h4 class='border'>
-      <%= link_to post.title, [@current_namespace, post].flatten %>
-
-      <%= link_to [@current_namespace, post].flatten, method: :delete, class: 'btn btn-small btn-danger pull-right span', confirm: "是否删除 #{post.title}" do %>
-        <i class='icon icon-ban-circle'></i>
-        <span>删除</span>
-      <% end %>
-
-      <%= link_to [:edit, @current_namespace, post].flatten, class: 'btn btn-small btn-info pull-right span' do %>
-        <i class='icon icon-edit'></i>
-        <span>编辑</span>
-      <% end %>
+      <%= link_to post.title, [@current_namespace||[:user, post.creator], post].flatten %>
+      <%= link_to post.column.name, [post.column, :posts], class: 'tag pull-right' %>
     </h4>
     <p>
       <%- if truncate_size %>
