--- a/app/views/user/posts/_form.html.erb
+++ b/app/views/user/posts/_form.html.erb
@@ -4,6 +4,7 @@
     <% end %>
     <%= f.association :category, as: :select, collection: current_user.categories, label: '分类', prompt: '请选择' %>    
   	<%= f.input :title, label: '标题' %>
+    <%= f.association :column, as: :select, collection: Column.all, label: '投稿', prompt: '请选择' %>    
   	<%= f.input :body, as: :kindeditor, label: false, input_html: {simple_mode: true, width: 500, height: 300 } %>
 
     <%= f.submit '创建', class: 'btn btn-primary', disable_with: "正在提交..." %>
