add grade select to question form

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -177,7 +177,7 @@ a {
 }
 
 a.tag {
-    background-color: #D9EDF7;
+    background-color: #E6EBED;
     border-bottom: 1px solid #B3CEE1;
     border-right: 1px solid #B3CEE1;
     color: #3E6D8E;
