--- a/app/views/ajax/get_schools_by_zone.js.erb
+++ b/app/views/ajax/get_schools_by_zone.js.erb
@@ -1,1 +1,1 @@
-$("#group_school_id").empty().append("<%= escape_javascript(options_for_select(@schools.map{|i|[i.name, i.id]})) %>");
+$("#school-list").empty().append("<option>请选择学校</option>").append("<%= escape_javascript(options_for_select(@schools.map{|i|[i.name, i.id]})) %>");
