--- a/app/views/ajax/get_zones_by_city.js.erb
+++ b/app/views/ajax/get_zones_by_city.js.erb
@@ -1,2 +1,4 @@
-$("#school-list").empty();
-$("#zone-list").empty().append("<%= escape_javascript(options_for_select(@zones.map{|i|[i.name, i.id]})) %>");
+$("#school-list").empty().append("<option>请选择学校</option>");
+<%- if @zones.size > 0 %>
+  $("#zone-list").empty().append("<option>请选择区县</option>").append("<%= escape_javascript(options_for_select(@zones.map{|i|[i.name, i.id]})) %>");
+<% end %>
