--- a/app/views/questions/_nav.html.erb
+++ b/app/views/questions/_nav.html.erb
@@ -8,7 +8,7 @@
   <% end %>
   <%= tab.top "排行榜", [:top, :questions] %>
   <%- if current_user %>
-    <%= link_to '我要提问', new_question_path, class: 'btn btn-success pull-right' %>
+    <%= link_to '我要提问', [:new, :user, current_user, :question], class: 'btn btn-success pull-right' %>
   <% else %>
     <%= link_to '立即注册', new_user_registration_path, class: 'btn btn-success pull-right' %>
   <% end %>
