--- a/app/views/shared/questions/_question.html.erb
+++ b/app/views/shared/questions/_question.html.erb
@@ -6,17 +6,12 @@
   <div class='content'>    
     <h4 class='border'>
       <%= link_to question.title, question %>
-      <%- if current_user and current_user.id == question.user_id %>
-        <%= link_to question, method: :delete, class: 'btn btn-small btn-danger pull-right span', confirm: "是否删除 #{ question.title}" do %>
-          <i class='icon icon-ban-circle'></i>
-          <span>删除</span>
-        <% end %>
-  
-        <%= link_to [:edit, question], class: 'btn btn-small btn-info pull-right span' do %>
-          <i class='icon icon-edit'></i>
-          <span>编辑</span>
-        <% end %>
-        <% end %>
+      <%- if question.grade %>
+        <%= link_to question.grade.name, [question.grade, :questions], class: 'tag span pull-right' %>
+      <% end %>
+      <%- if question.subject %>
+        <%= link_to question.subject.name, [question.subject, :questions], class: 'tag span pull-right' %>
+      <% end %>
     </h4>
     <p>
       <%- if truncate_size %>
@@ -29,6 +24,17 @@
       <span>作者(<%= link_to question.user.nickname, question.user %>)</span> 
       <span>阅读(<%= question.readings_count %>)</span>
       <span>回答(<%= question.answers_count %>)</span>
+      <%- if current_user and current_user.id == question.user_id %>
+        <%= link_to question, method: :delete, class: '', confirm: "是否删除 #{ question.title}" do %>
+          <i class='icon icon-ban-circle'></i>
+          <span>删除</span>
+        <% end %>
+  
+        <%= link_to [:edit, question], class: '' do %>
+          <i class='icon icon-edit'></i>
+          <span>编辑</span>
+        <% end %>
+      <% end %>
       <div class='pull-right'>
         <%= format_datetime question.created_at %>
       </div>
