--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,8 +6,8 @@
   <%= render 'nav' %>
   <div class='row'>
     <div class='span-l'>
-      <ul id='posts'>
-        <%= render partial: 'post', collection: @posts, locals: {truncate_size: 172} %>
+      <ul class='post-list'>
+        <%= render partial: 'shared/posts/post', collection: @posts, locals: {namespace: [:user, @current_user], truncate_size: 172} %>
       </ul>
       <%= paginate @posts %>
 
