--- a/app/views/shared/folders/_show_btn.html.erb
+++ b/app/views/shared/folders/_show_btn.html.erb
@@ -1,4 +1,4 @@
-<%= link_to [@current_namespace, @folder].flatten, class: 'btn btn-success pull-right btn-small span' do %>
+<%= link_to [@current_namespace, :media].flatten, class: 'btn btn-success pull-right btn-small span' do %>
   <i class="icon-chevron-left icon-white"></i>
   <span>返回目录</span>
 <% end %>
