--- a/app/views/shared/media/_medium.html.erb
+++ b/app/views/shared/media/_medium.html.erb
@@ -1,15 +1,29 @@
-<tr id='medium-<%= medium.id %>'>
-  <td width='60'>
-    <%= image_tag medium.thumbnail_url %>
-  </td>
-  <td><%= link_to medium.title, medium.file_url %></td> 
-  <td><%= number_to_human_size medium.file_size %></td>
-  <td><%= format_datetime medium.created_at %></td>
-  <td><%= link_to medium.mediumable.name, [@current_namespace||[:user, medium.creator], medium.mediumable].flatten %></td>
-  <td>
-    <%- if current_user and medium.creator_id == current_user.id or @current_member and  @current_member.admin %>
-      <%= link_to '删除', [medium].flatten, method: :delete, remote: true, data: {type: 'script'}, class: 'btn btn-danger btn-small', confirm: "是否确定删除 #{medium.file_name}" %>
+<li class='hover'>
+  <div class='image'>
+    <%- if @current_namespace %>
+      <%= link_to image_tag(medium.thumbnail_url), [@current_namespace, medium].flatten %>
+    <% else %>
+      <%= link_to image_tag(medium.thumbnail_url), [:user, medium.user, medium] %>
     <% end %>
-    <%= link_to '下载', medium.file_url, class: 'btn btn-info btn-small' %>
-  </td>
-</tr>
+  </div>
+  <div class='content'>
+    <h4>
+      <%- if @current_namespace %>
+        <%= link_to medium.title, [@current_namespace, medium].flatten %>
+      <% else %>
+        <%= link_to medium.title, [:user, medium.user, medium] %>
+      <% end %>
+    </h4>
+    <p>
+    <%- if @current_namespace and medium.folder %>
+      <%= link_to medium.folder.name, [@current_namespace, medium.folder, :media].flatten, class: 'tag' %>
+    <% else %>
+      <%= link_to medium.column.name, [medium.column, :media], class: 'tag' %>
+    <% end %>
+    </p>
+    <p>
+      下载(<%= medium.downloads_count %>) 查看(<%= medium.readings_count %>)
+    </p>
+    <p>上传日期(<%= format_datetime(medium.created_at) %>)</p>
+  </div>
+</li>
