--- a/app/views/user/media/new.html.erb
+++ b/app/views/user/media/new.html.erb
@@ -1,10 +1,10 @@
 <div class='row'>
   <div class='span-l'>
     <h4 class='border'>
-      <%= @folder.name %>
+      上传文件
       <%= render partial: 'shared/folders/show_btn' %>
     </h4>
-    <%= render 'shared/file_upload_form', record: Medium.new, url: [:user, current_user, @folder, :media] %>
+    <%= render 'form' %>
   </div>
   <div class='span-r pull-right'>
     <p class="tip">
