update group album

--- a/app/assets/stylesheets/span.css.scss
+++ b/app/assets/stylesheets/span.css.scss
@@ -23,6 +23,7 @@
   }
   
   .span-r .span-r{
+    padding-top: 10px;
     width: 135px;
   }
 }
@@ -41,8 +42,7 @@
   
   .span-r .span-r{
     width: 175px;
+    padding-top: 10px;
   }
-  
-
 }
 
