--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -110,6 +110,7 @@ ul li .item-info {
     border-color: #BCE8F1;
     color: #3A87AD;
     padding: 5px;
+    margin-bottom:5px;
 }
 
 div.field_with_errors .message {
