--- a/app/views/group/images/new.html.erb
+++ b/app/views/group/images/new.html.erb
@@ -1,10 +1,10 @@
 <div class='row'>
   <div class='span-l'>
     <h4 class='border'>
-      [<%= @album.name %>] 文件上传
+      照片上传
       <%= render 'shared/albums/show_btn' %>
     </h4>
-    <%= render 'shared/file_upload_form', record: @image, url: [@current_namespace, @album, :images].flatten %>
+    <%= render 'form' %>
   </div>
   <div class='span-r pull-right'>
   </div>
