--- a/app/views/groups/_meta.html.erb
+++ b/app/views/groups/_meta.html.erb
@@ -1,25 +1,38 @@
  <table class='meta table'>
   <tbody>
-   <tr>
-     <td><span class="badge badge-success">2</span></td> <td>位老师</td>
-   </tr>
-   <tr>
+   <%- if @current_group.is_class %>
+    <tr>
+      <td><span class="badge badge-success">2</span></td> 
+      <td>位老师</td>
+    </tr>
+    <tr>
+      <td>
+        <span class="badge badge-success">4</span> 
+      </td>
+      <td>位家长</td>
+    </tr>
+    <tr>
+      <td>
+        <span class="badge badge-success">8</span>
+      </td>
+      <td>
+        位同学
+      </td>
+    </tr>
+   <% else %>
+    <tr>
      <td>
-       <span class="badge badge-success">4</span> 
+       <span class="badge badge-success"><%= @current_group.members_count %></span>
      </td>
-     <td>位家长</td>
-   </tr>
+     <td>
+       位成员
+     </td>
+    </tr>
+   <% end %>
+
    <tr>
      <td>
-       <span class="badge badge-success">8</span>
-     </td>
-     <td>
-       位同学
-     </td>
-   </tr>
-   <tr>
-     <td>
-       <span class="badge badge-info">6</span> 
+       <span class="badge badge-info"><%= @current_group.posts_count %></span> 
      </td>
      <td>
        个话题
@@ -27,7 +40,7 @@
    </tr>
    <tr>
      <td>
-       <span class="badge badge-info">1</span> 
+       <span class="badge badge-info"><%= @current_group.albums_count %></span> 
      </td>
      <td>
        个相册
@@ -35,7 +48,7 @@
    </tr>
    <tr>
      <td>
-       <span class="badge badge-info">10</span>
+       <span class="badge badge-info"><%= @current_group.media_count %></span>
      </td>
      <td>
        个课件
@@ -43,7 +56,7 @@
    </tr>
    <tr>
      <td>
-       <span class="badge badge-warning">4</span>
+       <span class="badge badge-warning"><%= @current_group.readings_count %></span>
      </td>
      <td>
        次访问
