--- a/app/views/shared/albums/_show_btn.html.erb
+++ b/app/views/shared/albums/_show_btn.html.erb
@@ -1,4 +1,4 @@
-<%= link_to [@current_namespace, @album].flatten, class: 'btn btn-success pull-right btn-small span' do %>
+<%= link_to [@current_namespace, :images].flatten, class: 'btn btn-success pull-right btn-small span' do %>
   <i class="icon-chevron-left icon-white"></i>
   <span>返回相册</span>
 <% end %>
