--- a/app/views/shared/images/_add_btn.html.erb
+++ b/app/views/shared/images/_add_btn.html.erb
@@ -1,14 +1,4 @@
-<div class="btn-group pull-right">
-  <a class="btn dropdown-toggle btn-success btn-small" data-toggle="dropdown" href="#">
-    <i class="icon-plus icon-white"></i>
-    <span>添加照片</span>
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu">
-    <%- @albums.each do |album| %>
-      <li>
-        <%=link_to album.name, [:new, @current_namespace, album, :image].flatten %>
-      </li>
-    <% end %>
-  </ul>
-</div>
+<%=link_to [:new, @current_namespace, :image].flatten, class: 'btn btn-small btn-success pull-right' do %>
+  <i class="icon-plus icon-white"></i>
+  <span>添加照片</span>
+<% end %>
