--- a/app/views/groups/_hot_posts.html.erb
+++ b/app/views/groups/_hot_posts.html.erb
@@ -3,7 +3,7 @@
   <%- @hot_topics.each do |post| %>
     <li class='dashed'>
       <span class="badge badge-info"><%= post.comments_count %></span>
-      <%= link_to post.title, [:group, post.postable, post] %>
+      <%= link_to post.title, [:group, post.group, post] %>
     </li>
   <% end %>
 </ul>
