--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -12,30 +12,21 @@
 </div>
 
 <div class="widget-filled pull-right">
-<h3>Some Tips:</h3>
-<ul class="big-iconed-tips">
-<li>
-<i class="icon-credit-card"></i>
-Registration is free
-</li>
-<li>
-<i class="icon-lock"></i>
-100% Secured
-</li>
-<li>
-<i class="icon-comments"></i>
-24 Hours online support
-</li>
-<li>
-<i class="icon-cogs"></i>
-Customizable
-</li>
-<li>
-<i class="icon-github"></i>
-Host it on github
-</li>
-</ul>
-<p>Ut diam arcu, dictum ut vulputate sed, iaculis nec lorem. Fusce pharetra nisl vitae nisl ultricies ut malesuada leo fringilla.</p>
+  <%= image_tag 'jxt.png' %>
+  <br /><br />
+  <h4 class='border'>使用社交网络帐号登录</h4>
+  <h4>
+    <%= image_tag 'weibo_connect_32.png' %>
+  </h4>
+  <h4>
+    <%= image_tag 'qq_connect_32.png' %>
+  </h4>
+  <h4>
+    <%= image_tag 'renren_connect_30.png' %>
+  </h4>
+  <h4>
+    <%= image_tag 'douban_connect_32.png' %>
+  </h4>
 </div>
 
 
