--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -49,6 +49,12 @@ h4.border {
     color: #555;
 }
 
+h4.border span{
+    font-size: 12px;
+    font-weight: normal;
+    color: #666;
+}
+
 ul#top_users{
   li{
     margin: 5px 0;
