--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,21 +1,11 @@
 <footer class="footer" class='row'>
 	<div class='container'>
 		<span class="span gray-link" id="icp">
-			&copy; 2013 haobanji.com, all rights reserved &nbsp;&nbsp;
+			Just Demo &nbsp;&nbsp;
 			<a href="http://www.miibeian.gov.cn/"></a>
 		</span>
 
 		<span class="span pull-right">
-		· <%= link_to t('About'), page_path("about") %>
-		· <%= link_to t('FAQ'), page_path("faq") %>
-		· <%= link_to t('Help'), page_path("help") %>
-		· <%= link_to t('Feedback'), page_path("feedback") %>
-		· <%= link_to t('Contact'), page_path("contact") %>
 		</span>
 	</div>
 </footer>
-
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa7ea6a1f8e3a074d7f4b4488b67979a5' type='text/javascript'%3E%3C/script%3E"));
-</script>
