--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,10 +1,18 @@
 .content
   %h4= "Product List (#{Product.count})"
   %table.table
+    %thead
+      %tr
+        %th= "Name"
+        %th= "Category"
+        %th= "Price"
+        %th= "Created at"
     - @products.each do |product|
       %tr
-        %td= product.name
+        %td
+          = link_to product.name, [:detail, product], remote: true, data: {type: 'script'}
         %td= product.catelog
+        %td= product.price
         %td{width: 160}
           = timeago_tag product.created_at, :nojs => true
   = paginate @products
