add name to manuals

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 .content
-  %h4= "Product List (#{Product.count})"
+  %h4= "Product List (#{Product.display.count})"
   %table.table
     %thead
       %tr
