--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -1,7 +1,7 @@
 .content
   %h4= 'Manuals'
   - @product.product_manuals.each do |manual|
-    .pull-left= link_to manual.name, manual.file.url
+    .pull-left= link_to image_tag(manual.cover.url), manual.file.url
   %h4= 'Images'
   - @product.product_images.each do |image|
-    .pull-left= image_tag image.file.url
+    .pull-left= image_tag image.image.url
